--- a/WebContent/arkaapp/common/footer.html
+++ b/WebContent/arkaapp/common/footer.html
@@ -9,5 +9,5 @@
 	  	</div> -->
 	   
 	  	<div class="copyright"> Copyright © 2014 <a	href="http://www.arkainterio.com" target="_parent">Arka Interiors</a> </div>
-	 <br/><br/><br/><br/> </div>
+	 <br/><br/> </div>
 	   
