--- a/WebContent/arkaapp/common/footer.html
+++ b/WebContent/arkaapp/common/footer.html
@@ -8,6 +8,6 @@
 	  		</ul>
 	  	</div> -->
 	   
-	  	<div class="copyright"> Copyright © 2014 <a	href="http://www.arkainterio.com" target="_parent">Arka Interiors</a> </div>
+	  	<div class="copyright"> Copyright &copy; 2014 <a	href="http://www.arkainterio.com" target="_parent">Arka Interiors</a> </div>
 	 <br/><br/> </div>
 	   
