--- a/WebContent/arkaapp/common/header.html
+++ b/WebContent/arkaapp/common/header.html
@@ -26,8 +26,8 @@
 			<div id="templatemo_header">
 				<div id="logo"></div>
 				<div id="templatemo_menu">
-					<div style="font-size: 15px; margin-left: 0px;line-height:30px; font-weight: bold; color: #DBD6D9;;">
-						info@arkainterio.com &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;&#43; 91- 8496999955 &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp; 080- 41171925
+					<div class="contacttext">
+						info@arkainterio.com &nbsp; | &nbsp;&#43; 91- 8496999955 &nbsp; | &nbsp; 080- 41171925
 					</div>
 					<!-- <ul>
 						<li><a href="index.html" class="css3dbutton"><span></span>Home</a></li>
